refactor: 23, 24번 비교함 API 명세서 스펙 및 피드백 규격 반영